Overflow issue

--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,6 @@ form button,
   max-width:800px;
   padding:8px;
   margin:0 auto;
-  overflow-x:hidden;
-  overflow-y:visible;
 }
 
 .top-bar{
